# like-a-sir

./: CMakeLists.txt  launch
asset/: niveaux.sir
src/: BufferManager.cpp  BufferManager.h  CMakeLists.txt  GestionnaireNiveau.cpp  GestionnaireNiveau.h  Singleton.h  TextureManager.cpp  TextureManager.h  acteur.cpp  acteur.h  baril.cpp  baril.h  chargeurNiveau.cpp  chargeurNiveau.h  clef.cpp  clef.h  collectionnable.cpp  collectionnable.h  interaction.cpp  interaction.h  joueur.cpp  joueur.h  levier.cpp  levier.h  main.cpp  mechant.cpp  mechant.h  menu.cpp  menu.h  niveau.cpp  niveau.h  personnage.cpp  personnage.h  porte.cpp  porte.h  trap.cpp  trap.h  trapAuto.cpp  trapAuto.h
